[package]
name = "panda-api-install"
version = "0.1.0"
authors = ["edison <arlicle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
fs_extra = "1.1.0"
pretty_env_logger = "0.4.0"
log = "0.4.8"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winuser"] }
winreg = "0.6.2"


